--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.55.0",
     "web-vitals": "^2.1.4"
   },
